# python-project-52

./: .coverage  .env.example  .gitignore  Dockerfile  Makefile  README.md  coverage.xml  db.sqlite3  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: my-check.yml
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/templates/: 404.html  500.html  index.html  layout.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  task.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  login.html  update.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
