[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-bootstrap5>=25.1",
    "django>=5.2.3",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "ruff>=0.11.13",
    "dj-database-url>=3.0.0",
    "psycopg2-binary>=2.9.10",
    "django-widget-tweaks>=1.5.0",
    "rollbar>=1.3.0",
    "coverage>=7.9.1",
]
